--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2024,6 +2024,7 @@ input, select, textarea {
 			font-variant: normal;
 			text-rendering: auto;
 			line-height: 1;
+			text-decoration: none;
 			text-transform: none !important;
 			font-family: 'Font Awesome 5 Free';
 			font-weight: 400;
@@ -2817,11 +2818,9 @@ input, select, textarea {
 		}
 
 		.wrapper.style1 {
-			background: #c31432;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #240b36, #c31432);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #240b36, #c31432); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
-			color: #c8ece9;
+			background: #0f2027; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #0f2027, #203a43, #2c5364); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #0f2027, #203a43, #2c5364); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 		}
 
 			.wrapper.style1 strong, .wrapper.style1 b {
@@ -3891,18 +3890,22 @@ background: linear-gradient(to right, #240b36, #c31432); /* W3C, IE 10+/ Edge, F
 		padding: 6em 0 4em 0 ;
 		background-color: #1d242a;
 		text-align: center;
+		outline: 0;
 	}
 
 		#footer .icons {
+			outline: 0;
 			font-size: 1.25em;
 		}
 
 			#footer .icons a {
 				color: rgba(255, 255, 255, 0.5);
+				border: 0;
 			}
 
 				#footer .icons a:hover {
 					color: #fff;
+					outline: 0;
 				}
 
 		#footer .copyright {
